# snk_Quiz

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0c4d87d1bc1c_reset_tables_for_testing_migration.py  663a1fcf9904_drop_quizzes_table.py  780b0bf8d4d2_create_quiz_table.py  85aacf0bf02d_init_tables.py
app/: main.py  seed.py
app/core/: database.py  dependencies.py
app/quiz/application/: dto.py  service.py
app/quiz/domain/: models.py
app/quiz/interface/: router.py
app/user/domain/: models.py
tests/: conftest.py  test_quiz.py
